# AI-RAG-CHATBOT

./: .env.example  CLAUDE.md  Rag_pipline_from_scratch.ipynb  pyproject.toml
.gemini/: settings.json
backend/: app.py  search_tools.py  vector_store.py
backend/tests/: test_ai_generator.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
