[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "chromadb==1.3.5",
    "anthropic==0.75.0",
    "sentence-transformers==5.1.2",
    "fastapi==0.124.0",
    "uvicorn==0.38.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.2.1",
    "click==8.3.1",
    "h11==0.16.0",
    "starlette==0.50.0",
    "annotated-doc==0.0.4",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "anyio==4.12.0",
    "annotated-types==0.7.0",
    "numpy==2.3.5",
    "overrides==7.7.0",
    "tenacity==9.1.2",
    "pybase64==1.4.3",
    "jsonschema==4.19.0",
    "attrs==25.4.0",
    "pyrsistent==0.20.0",
    "httpx==0.28.1",
    "idna==3.11",
]
